# frontier

./: Cargo.lock.bak  Cargo.toml  MyToken.json  aa.txt  build.sh  buildraw.sh  customSpec.json  customSpec.json.1  customSpec.json.2  customSpec.json.bak  customSpec.json.orig  customSpecRaw.json  first.sh  insertKey.sh  key.txt  kk.sh  kk.txt  mainnet.json  mainnet.json.bak  mem-monit.sh  place  staging.json  start-alice.sh  start-bob.sh  start-dave.sh  start-frontier.sh  start1.sh  start10.sh  start2.sh  start3.sh  start4.sh  start5.sh  start6.sh  startAlice.sh  startAll.sh  startBob.sh  startDev.sh  stop-frontier.sh  stopAll.sh  testnet.json  (+1 more)
.github/: dependabot.yml
client/cli/: Cargo.toml
client/consensus/: Cargo.toml
client/db/: Cargo.toml
client/mapping-sync/: Cargo.toml
client/rpc/: Cargo.toml
client/rpc-core/: Cargo.toml
client/rpc-core/src/: masternode.rs
client/rpc/src/: lib.rs  masternode.rs
client/rpc/src/eth/: client.rs
docs/: node-template-release.md
frame/base-fee/: Cargo.toml
frame/dynamic-fee/: Cargo.toml
frame/ethereum/: Cargo.toml
frame/evm/: Cargo.toml
frame/evm-chain-id/: Cargo.toml
frame/evm/precompile/bn128/: Cargo.toml
frame/evm/precompile/dispatch/: Cargo.toml
frame/evm/precompile/simple/: Cargo.toml
frame/evm/src/: lib.rs  tests.rs
frame/evm/test-vector-support/: Cargo.toml
frame/hotfix-sufficients/: Cargo.toml
frame/masternode/: Cargo.toml
frame/masternode/src/: lib.rs  lib.rs.bak  lib1.rs  traits.rs  weights.rs
frame/node-authorization/: Cargo.toml
frame/node-authorization/src/: lib.rs  traits.rs
primitives/consensus/: Cargo.toml
primitives/dynamic-fee/: Cargo.toml
primitives/ethereum/: Cargo.toml
primitives/evm/: Cargo.toml
primitives/masternode/: Cargo.toml
primitives/masternode/src/: lib.rs
primitives/rpc/: Cargo.toml
primitives/rpc/src/: lib.rs
primitives/self-contained/: Cargo.toml
template/node/: Cargo.toml
template/node/src/: chain_spec.rs  command.rs  rpc.rs
template/node/src/rpc/: eth.rs
template/runtime/: Cargo.toml
template/runtime/src/: lib.rs
