[package]
name = "pallet-masternode"
version = "1.0.0"
authors = ["johntonny"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/John-Tonny/substrate/"
description = "FRAME pallet for masternode"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
scale-info = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }

sp-core = { workspace = true }
sp-io = {  workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Node Authorization
pallet-node-authorization = {version = "4.0.0-dev", path = "../../frame/node-authorization", default-features = false }
fp-masternode = {version = "1.0.0", path = "../../primitives/masternode", default-features = false }

serde = { version = "1.0.136", features = ["derive"], default_features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	
	"pallet-node-authorization/std",
	"fp-masternode/std",
	"serde/std",
]
try-runtime = ["frame-support/try-runtime"]
