[package]
description = "Substrate masternode primitives"
name = "fp-masternode"
version = "1.0.0"
license = "Apache-2.0"
authors = ["johntonny"]
edition = "2021"
homepage = "https://substrate.io"
repository = "https://github.com/John-Tonny/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }


[features]
default = ["std"]
std = [ "sp-api/std", 
	"sp-core/std", 
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
]
